Fix overlapping output sidebar when closing wizard

--- a/src/app/themes/volumio3/volumio3-style.scss
+++ b/src/app/themes/volumio3/volumio3-style.scss
@@ -537,7 +537,7 @@ li.list-group-item {
   width: 210px;
   height: 210px;
   margin: 0px auto 15px auto;
-  z-index: 0;
+  z-index: 0!important;
 }
 
 .knob {
